--- a/PayRollSystem/appsettings.json
+++ b/PayRollSystem/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=SANIUL;Database=PayRollSystem;Encrypt=False;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
